--- a/foldingView/en.lproj/MainStoryboard.storyboard
+++ b/foldingView/en.lproj/MainStoryboard.storyboard
@@ -6,6 +6,20 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
     <scenes>
+        <!--Animate View Controller-->
+        <scene sceneID="8ee-Lb-10W">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z7h-BW-KHt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="o01-zf-mff" customClass="AnimateViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mDM-k3-XRt">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="139" y="-429"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
@@ -49,6 +63,9 @@
         </scene>
     </scenes>
     <classes>
+        <class className="AnimateViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AnimateViewController.h"/>
+        </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
